[package]
name = "slint_rb"
version = "0.1.0"
edition = "2024"
authors = ["Wojciech Zygmuntowicz <wzygmuntowicz.zygmuntowicz@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
css-color-parser2 = "1.0.1"
i-slint-backend-selector = "1.17.0"
i-slint-compiler = "1.17.0"
i-slint-core = "1.17.0"
magnus = { version = "0.8.2" }
slint = "1.17.0"
slint-interpreter = "1.17.0"
spin_on = "0.1.1"
